fix up styling for case studies on mobile

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -434,7 +434,8 @@ section h3.section-subheading {
 
 #portfolio .portfolio-item {
     right: 0;
-    margin: 0 0 15px;
+    margin: 30px auto;
+    max-width: 400px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -497,7 +498,6 @@ section h3.section-subheading {
 #portfolio .portfolio-item .portfolio-caption {
     margin: 0 auto;
     padding: 25px;
-    max-width: 400px;
     text-align: center;
     background-color: #fff;
 }
